Tweaked command line output